add game over text when game is loose

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <!-- set viewport to device width to allow responsiveness -->
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- Bootstrap CDN -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
+
     <!-- Custom CSS -->
     <link rel="stylesheet" href="css/style.css">
     <!-- JS -->
@@ -15,6 +15,9 @@
     <title>Car Game</title>
 </head>
 <body>
+  <article class="loader">
+    <h1>gameover</h1>
+  </article>
   <section>
     <h1>Car game avoid other car</h1>
     <img src="img/road.png"  width="100%" id="road">
@@ -22,6 +25,7 @@
     <aside id="obstacle">
     </aside>
   </section>
+
   <script src="http://code.jquery.com/jquery-2.2.2.min.js"></script>
   <script src="scripts/conf.js" ></script>
   <script src="scripts/function.js" ></script>
